--- a/.github/workflows/test-4.yml
+++ b/.github/workflows/test-4.yml
@@ -4,6 +4,8 @@ on:
 jobs:
   producer:
     runs-on: ubuntu-22.04
+    outputs:
+      foo: ${{ steps.generate-foo.outputs.foo }}
     steps:
         - name: Generate and export foo
           id: generate-foo
@@ -12,7 +14,19 @@ jobs:
             echo "foo=${foo}" >> "${GITHUB_OUTPUT}"
             echo "FOO=${foo}" >> "${GITHUB_ENV}"
 
+        - name: Inspect values outside producer
+          run: |
+
         - name: Inspect values inside producer
           run: |
             echo "FOO (set via GITHUB_ENV): $FOO"
             echo "foo (step output): ${{steps.generate-foo.outputs.foo}}"
+
+  consumer:
+    runs-on: ubuntu-22.04
+    needs: producer
+    steps:
+      - name: Inspect values outside consumer
+        run: |
+          echo "Value from producer: ${{needs.producer.outputs.foo}}"
+          echo "FOO in consumer: ${FOO}"
