--- a/.github/workflows/test-3.yml
+++ b/.github/workflows/test-3.yml
@@ -1,32 +1,32 @@
-on:
-  workflow_dispatch:
-
-env:
-  WORKFLOW_VAR: I_AM_WORKFLOW_SCOPED
-
-jobs:
-  job-1:
-    runs-on: ubuntu-22.04
-    env:
-      JOB_VAR: I_AM_JOB_1_SCOPED
-    steps:
-      - name: Inspect scopes job 1 step 1
-        env:
-          STEP_VAR: I_AM_STEP_SCOPED
-        run: | 
-            echo "WORKFLOW_VAR: ${WORKFLOW_VAR}"
-            echo "JOB_VAR: ${JOB_VAR}"
-            echo "STEP_VAR: ${STEP_VAR}"
-      - name: Inspect scopes job 1 step 2
-        run: |
-            echo "WORKFLOW_VAR: $WORKFLOW_VAR"
-            echo "JOB_VAR: $JOB_VAR"
-            echo "STEP_VAR: ${STEP_VAR:-<UNSET>}"
-  job-2:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Inspect scopes job 2 step 2
-        run: |
-          echo "WORKFLOW_VAR: $WORKFLOW_VAR"                 # still visible
-          echo "JOB_VAR:      ${FOO:-<UNSET>}"               # not set here
-          echo "STEP_VAR:     ${STEP_VAR:-<UNSET>}"          # not set here
+#on:
+#  workflow_dispatch:
+#
+#env:
+#  WORKFLOW_VAR: I_AM_WORKFLOW_SCOPED
+#
+#jobs:
+#  job-1:
+#    runs-on: ubuntu-22.04
+#    env:
+#      JOB_VAR: I_AM_JOB_1_SCOPED
+#    steps:
+#      - name: Inspect scopes job 1 step 1
+#        env:
+#          STEP_VAR: I_AM_STEP_SCOPED
+#        run: |
+#            echo "WORKFLOW_VAR: ${WORKFLOW_VAR}"
+#            echo "JOB_VAR: ${JOB_VAR}"
+#            echo "STEP_VAR: ${STEP_VAR}"
+#      - name: Inspect scopes job 1 step 2
+#        run: |
+#            echo "WORKFLOW_VAR: $WORKFLOW_VAR"
+#            echo "JOB_VAR: $JOB_VAR"
+#            echo "STEP_VAR: ${STEP_VAR:-<UNSET>}"
+#  job-2:
+#    runs-on: ubuntu-22.04
+#    steps:
+#      - name: Inspect scopes job 2 step 2
+#        run: |
+#          echo "WORKFLOW_VAR: $WORKFLOW_VAR"                 # still visible
+#          echo "JOB_VAR:      ${FOO:-<UNSET>}"               # not set here
+#          echo "STEP_VAR:     ${STEP_VAR:-<UNSET>}"          # not set here
