--- a/.github/workflows/test-5.yml
+++ b/.github/workflows/test-5.yml
@@ -1,40 +1,40 @@
-name: "Environment / Repo Variables - Test 5"
-on:
-  workflow_dispatch:
-
-jobs:
-  staging-environment:
-    runs-on: ubuntu-22.04
-    environment: staging
-    env:
-      EXAMPLE_ENVIRONMENT_SECRET: ${{ secrets.EXAMPLE_ENVIRONMENT_SECRET }}
-      EXAMPLE_REPOSITORY_SECRET: ${{ secrets.EXAMPLE_REPOSITORY_SECRET }}
-
-      EXAMPLE_ENVIRONMENT_VARIABLE: ${{ vars.EXAMPLE_ENVIRONMENT_VARIABLE }}
-      EXAMPLE_REPOSITORY_VARIABLE: ${{ vars.EXAMPLE_REPOSITORY_VARIABLE }}
-    steps:
-      - name: Inspect secrets and variables
-        run: |
-          echo "--- Staging Environment---"
-          echo "EXAMPLE_ENVIRONMENT_SECRET: ${EXAMPLE_ENVIRONMENT_SECRET:-<UNSET>}"
-          echo "EXAMPLE_REPOSITORY_SECRET: ${EXAMPLE_REPOSITORY_SECRET:-<UNSET>}"
-          echo "EXAMPLE_ENVIRONMENT_VARIABLE: ${EXAMPLE_ENVIRONMENT_VARIABLE-<UNSET>}"
-          echo "EXAMPLE_REPOSITORY_VARIABLE: ${EXAMPLE_REPOSITORY_VARIABLE-<UNSET>}"
-
-  production-environment:
-    runs-on: ubuntu-22.04
-    environment: production
-    env:
-      EXAMPLE_ENVIRONMENT_SECRET: ${{ secrets.EXAMPLE_ENVIRONMENT_SECRET }}
-      EXAMPLE_REPOSITORY_SECRET: ${{ secrets.EXAMPLE_REPOSITORY_SECRET }}
-
-      EXAMPLE_ENVIRONMENT_VARIABLE: ${{ vars.EXAMPLE_ENVIRONMENT_VARIABLE }}
-      EXAMPLE_REPOSITORY_VARIABLE: ${{ vars.EXAMPLE_REPOSITORY_VARIABLE }}
-    steps:
-      - name: Inspect secrets and variables
-        run: |
-          echo "--- Production Environment---"
-          echo "EXAMPLE_ENVIRONMENT_SECRET: ${EXAMPLE_ENVIRONMENT_SECRET:-<UNSET>}"
-          echo "EXAMPLE_REPOSITORY_SECRET: ${EXAMPLE_REPOSITORY_SECRET:-<UNSET>}"
-          echo "EXAMPLE_ENVIRONMENT_VARIABLE: ${EXAMPLE_ENVIRONMENT_VARIABLE-<UNSET>}"
-          echo "EXAMPLE_REPOSITORY_VARIABLE: ${EXAMPLE_REPOSITORY_VARIABLE-<UNSET>}"
+#name: "Environment / Repo Variables - Test 5"
+#on:
+#  workflow_dispatch:
+#
+#jobs:
+#  staging-environment:
+#    runs-on: ubuntu-22.04
+#    environment: staging
+#    env:
+#      EXAMPLE_ENVIRONMENT_SECRET: ${{ secrets.EXAMPLE_ENVIRONMENT_SECRET }}
+#      EXAMPLE_REPOSITORY_SECRET: ${{ secrets.EXAMPLE_REPOSITORY_SECRET }}
+#
+#      EXAMPLE_ENVIRONMENT_VARIABLE: ${{ vars.EXAMPLE_ENVIRONMENT_VARIABLE }}
+#      EXAMPLE_REPOSITORY_VARIABLE: ${{ vars.EXAMPLE_REPOSITORY_VARIABLE }}
+#    steps:
+#      - name: Inspect secrets and variables
+#        run: |
+#          echo "--- Staging Environment---"
+#          echo "EXAMPLE_ENVIRONMENT_SECRET: ${EXAMPLE_ENVIRONMENT_SECRET:-<UNSET>}"
+#          echo "EXAMPLE_REPOSITORY_SECRET: ${EXAMPLE_REPOSITORY_SECRET:-<UNSET>}"
+#          echo "EXAMPLE_ENVIRONMENT_VARIABLE: ${EXAMPLE_ENVIRONMENT_VARIABLE-<UNSET>}"
+#          echo "EXAMPLE_REPOSITORY_VARIABLE: ${EXAMPLE_REPOSITORY_VARIABLE-<UNSET>}"
+#
+#  production-environment:
+#    runs-on: ubuntu-22.04
+#    environment: production
+#    env:
+#      EXAMPLE_ENVIRONMENT_SECRET: ${{ secrets.EXAMPLE_ENVIRONMENT_SECRET }}
+#      EXAMPLE_REPOSITORY_SECRET: ${{ secrets.EXAMPLE_REPOSITORY_SECRET }}
+#
+#      EXAMPLE_ENVIRONMENT_VARIABLE: ${{ vars.EXAMPLE_ENVIRONMENT_VARIABLE }}
+#      EXAMPLE_REPOSITORY_VARIABLE: ${{ vars.EXAMPLE_REPOSITORY_VARIABLE }}
+#    steps:
+#      - name: Inspect secrets and variables
+#        run: |
+#          echo "--- Production Environment---"
+#          echo "EXAMPLE_ENVIRONMENT_SECRET: ${EXAMPLE_ENVIRONMENT_SECRET:-<UNSET>}"
+#          echo "EXAMPLE_REPOSITORY_SECRET: ${EXAMPLE_REPOSITORY_SECRET:-<UNSET>}"
+#          echo "EXAMPLE_ENVIRONMENT_VARIABLE: ${EXAMPLE_ENVIRONMENT_VARIABLE-<UNSET>}"
+#          echo "EXAMPLE_REPOSITORY_VARIABLE: ${EXAMPLE_REPOSITORY_VARIABLE-<UNSET>}"
