--- a/.github/workflows/ActionsInAction-1.yml
+++ b/.github/workflows/ActionsInAction-1.yml
@@ -12,5 +12,5 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3.5.2
       - run: | 
-          echo "Listing all ${github.repository} files"
+          echo "Listing all ${{github.repository}} files"
           tree
